Updated All Pages

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: rgb(253,29,29);
-  background: rgb(253,29,29);
-background: linear-gradient(90deg, rgba(253,29,29,1) 0%, rgba(98,129,134,1) 0%, rgba(197,107,56,1) 4%, rgba(104,130,128,1) 6%, rgba(104,130,128,1) 8%, rgba(110,131,122,1) 13%, rgba(114,132,119,1) 16%, rgba(197,105,55,1) 16%, rgba(103,130,129,1) 19%, rgba(91,128,140,1) 23%, rgba(91,128,140,1) 23%, rgba(186,131,57,1) 26%, rgba(157,85,96,1) 29%, rgba(180,144,58,1) 31%, rgba(186,131,57,1) 35%, rgba(185,61,130,1) 36%, rgba(215,62,52,1) 37%, rgba(139,92,110,1) 38%, rgba(201,95,55,1) 39%, rgba(194,112,56,1) 40%, rgba(199,101,55,1) 44%, rgba(166,81,89,1) 46%, rgba(169,80,87,1) 49%, rgba(118,116,120,1) 51%, rgba(179,76,79,1) 56%, rgba(68,124,161,1) 58%, rgba(184,74,75,1) 61%, rgba(179,76,79,1) 61%, rgba(107,107,132,1) 65%, rgba(157,85,96,1) 66%, rgba(166,73,126,1) 67%, rgba(166,73,126,1) 67%, rgba(144,90,106,1) 69%, rgba(188,60,123,1) 73%, rgba(176,121,75,1) 75%, rgba(156,110,93,1) 76%, rgba(200,58,94,1) 77%, rgba(108,131,124,1) 79%, rgba(212,56,66,1) 81%, rgba(218,55,52,1) 83%, rgba(218,55,52,1) 83%, rgba(231,149,28,1) 90%, rgba(194,130,61,1) 93%, rgba(144,90,106,1) 100%, rgba(129,96,117,1) 100%, rgba(245,255,0,1) 100%);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    270deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 32%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 div {
