--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 #box {
   color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.514);
+  background-color: rgba(0, 255, 0, 0.514);
   text-align: center;
   border: 3px solid black;
   margin-top: 10px;
@@ -35,4 +35,7 @@ body {
 #teenVaccines {
   width: 100%;
   margin-bottom: 10px;
+}
+#link {
+  color: rgba(255, 0, 255, 1);
 }
