--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   margin-bottom: 10px;
 }
 #flatreadbutton {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 #teenVaccines {
   width: 100%;
@@ -38,4 +38,8 @@ body {
 }
 #link {
   color: rgba(255, 0, 255, 1);
+}
+#homebox {
+  border: 3px solid black;
+  margin-bottom: 3px;
 }
