--- a/style.css
+++ b/style.css
@@ -53,10 +53,12 @@ body {
 }
 #flatbox {
   text-align: center;
+  border: 3px solid black;
   background-color: rgba(255, 100, 121, 1);
 }
 #vaccinebox {
   text-align: center;
+  border: 3px solid black;
   background-color: rgba(255, 100, 121, 1);
 }
 #titanicbutton {
