--- a/style.css
+++ b/style.css
@@ -54,12 +54,14 @@ body {
 #flatbox {
   text-align: center;
   border: 3px solid black;
-  background-color: rgba(255, 100, 121, 1);
+  background-color: rgba(255, 0, 0, 1);
+  margin-bottom: 10px;
 }
 #vaccinebox {
   text-align: center;
   border: 3px solid black;
-  background-color: rgba(255, 100, 121, 1);
+  background-color: rgba(255, 0, 0, 1);
+  margin-bottom: 10px;
 }
 #titanicbutton {
   color: rgba(255, 34, 173, 1);
