--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   background-color: rgba(0, 255, 0, 1);
   text-align: center;
   border: 3px solid black;
+  margin-bottom: 15px;
 }
 body {
   background: rgb(2, 0, 36);
