--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ body {
   background: rgb(2, 0, 36);
   background: linear-gradient(
     270deg,
-    rgba(2, 0, 3, 1) 0%,
-    rgb(71, 71, 71) 32%,
-    rgb(255, 255, 255) 100%
-  )
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 32%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 #earthphoto {
   width: 30%;
