--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 #logo {
-  width: 10%;
+  margin-top: 5px;
+  margin-right: 10px;
+  margin-left: -10px;
+  width: 50px;
 }
 #menu {
-  height: 10%;
   margin-bottom: 20px;
+}
+#collapsibleNavbar {
+  height: auto;
 }
 #row {
   height: 80%;
@@ -21,8 +26,35 @@ body {
     270deg,
     rgba(2, 0, 36, 1) 0%,
     rgba(9, 9, 121, 1) 32%,
-    rgba(0, 212, 255, 1) 100%
-  );
+    rgba(0, 212, 255, 1) 100%);
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+#grid-item {
+  border: 2px solid rgba(0, 0, 0, 0.8);
+}
+.grid-item {
+  background-color: rgba(175, 175, 175, 0.911);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+#grid-item-middle {
+  border-top: 2px solid rgba(0, 0, 0, 0.8);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.8);
+}
+#grid-item-middle-row {
+  border-right: 2px solid rgba(0, 0, 0, 0.8);
+  border-left: 2px solid rgba(0, 0, 0, 0.8);
+}
+.grid-item-middle-row {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
 }
 #earthphoto {
   width: 30%;
