--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
   /* Start of grid things */
 .grid-container {
-  display: grid;
+  display: inline-grid;
   grid-template-columns: auto auto auto;
   background-color: #2196F3;
   padding: 10px;
