--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@
   border: 3px solid black;
   margin-bottom: 15px;
 }
+html {
+  font-size: 22px;
+}
 body {
+  padding: 1rem;
   background: rgb(2, 0, 36);
   background: linear-gradient(
     270deg,
@@ -32,6 +36,27 @@ body {
     rgba(0, 212, 255, 1) 100%);
 }
   /* Start of grid things */
+.card {
+  background-color: dodgerblue;
+  color: white;
+  padding: 1rem;
+  height: 4rem;
+}
+.cards {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1rem;
+}
+/* Screen larger than 600px? 2 column */
+@media (min-width: 600px) {
+  .cards { grid-template-columns: repeat(2, 1fr); }
+}
+
+/* Screen larger than 900px? 3 columns */
+@media (min-width: 900px) {
+  .cards { grid-template-columns: repeat(3, 1fr); }
+}
 .grid-container {
   display: inline-grid;
   grid-template-columns: auto auto auto;
