--- a/index.css
+++ b/index.css
@@ -106,6 +106,9 @@ body {
 #link {
   color: rgba(0, 255, 0, 1);
 }
+#menu-row {
+  background-color: DarkSlateGray;
+}
 #homebox {
   text-align: center;
   border: 3px solid black;
