--- a/index.css
+++ b/index.css
@@ -20,8 +20,9 @@
   color: rgb(0, 0, 0);
   background-color: rgba(0, 255, 0, 1);
   text-align: center;
+  border-radius: 0.25rem;
   border: 3px solid black;
-  margin-bottom: 1rem;
+  margin: 0.5rem;
 }
 html {
   font-size: 22px;
