--- a/index.css
+++ b/index.css
@@ -87,6 +87,7 @@ body {
   color: rgba(0, 255, 0, 1);
 }
 #menu-row {
+  border-radius: 0.25rem;
   background-color: midnightblue;
   border: 3px;
 }
@@ -94,6 +95,7 @@ body {
   text-align: center;
   border: 3px solid black;
   margin: 15px;
+  border-radius: 0.25rem;
   background-color: rgba(0, 150, 255, 1);
 }
 #vaccinebutton {
