--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ body {
 #menu-row {
   border-radius: 0.25rem;
   background-color: midnightblue;
-  border: 3px solid black;
+  border: 3px solid darkslategray;
 }
 #homebox {
   text-align: center;
