--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body {
   padding: 10px;
 }
 #grid-item {
-  border: 2px solid rgba(0, 0, 0, 0.8);
+  border: 2px solid black;
 }
 .grid-item {
   background-color: rgba(175, 175, 175, 0.911);
