--- a/index.css
+++ b/index.css
@@ -46,11 +46,12 @@ body {
 #grid-item {
   border-radius: 0.25rem;
   border: 2px solid black;
+  margin: 1rem;
 }
 .grid-item {
   background-color: rgba(175, 175, 175, 0.911);
-  padding: 20px;
-  font-size: 30px;
+  padding: 1rem;
+  font-size: 2rem;
   text-align: center;
 }
 /* End of grid things */
