--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ body {
 }
 /* End of grid things */
 #featured {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin: 0.5rem;
 }
 #earthphoto {
