--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
 /* Start Main Body */
 #box {
   color: rgb(0, 0, 0);
-  background-color: rgba(0, 255, 0, 1);
+  background-color: indianred;
   text-align: center;
   border-radius: 0.25rem;
   border: 3px solid black;
