--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ body {
   margin: 0.5rem;
 }
 .grid-item {
-  background-color: wheat;
+  background-color: rosybrown;
   padding: 1rem;
   font-size: 2rem;
   text-align: center;
