--- a/index.css
+++ b/index.css
@@ -17,8 +17,7 @@
 /* End Navbar Stuff */
 /* Start Main Body */
 #box {
-  color: rgb(0, 0, 0);
-  background-color: indianred;
+  background-color: darkslategray;
   text-align: center;
   border-radius: 0.25rem;
   border: 3px solid black;
