--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
 /* End Navbar Stuff */
 /* Start Main Body */
 #box {
-  background-color: darkslategray;
+  background-color: darkolivegreen;
   text-align: center;
   border-radius: 0.25rem;
   border: 3px solid black;
