commented menu stuff

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 /* Navbar stuff start */
+/*
 #logo {
   margin-top: 5px;
   margin-right: 10px;
@@ -14,6 +15,7 @@
 #row {
   height: 80%;
 }
+*/
 /* End Navbar Stuff */
 /* Start Main Body */
 #box {
