--- a/index.css
+++ b/index.css
@@ -1,216 +1,66 @@
 #logo {
   width: 3rem;
 }
-/* UTILITIES */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
- }
- body {
-  font-family: cursive;
- }
- a {
-  text-decoration: none;
- }
- li {
-  list-style: none;
- }
-/* UTILITIES */
-* {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-body {
-font-family: sans-serif;
-}
-a {
-text-decoration: none;
-}
-li {
-list-style: none;
-}/* NAVBAR STYLING STARTS */
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem;
-  background-color: teal;
-  color: #fff;
- }
- .nav-links a {
-  color: #fff;
- }
- /* LOGO */
- .logo {
-  font-size: 32px;
- }
- /* NAVBAR MENU */
- .menu {
-  display: flex;
-  gap: 1em;
-  font-size: 18px;
- }
- .menu li:hover {
-  background-color: #4c9e9e;
-  border-radius: 5px;
-  transition: 0.3s ease;
- }
- .menu li {
-  padding: 5px 14px;
- }
- /* DROPDOWN MENU */
- .services {
-  position: relative; 
- }
- .dropdown {
-  background-color: rgb(1, 139, 139);
-  padding: 1em 0;
-  position: absolute; /*WITH RESPECT TO PARENT*/
-  display: none;
-  border-radius: 8px;
-  top: 35px;
- }
- .dropdown li + li {
-  margin-top: 10px;
- }
- .dropdown li {
-  padding: 0.5em 1em;
-  width: 8em;
-  text-align: center;
- }
- .dropdown li:hover {
-  background-color: #4c9e9e;
- }
- .services:hover .dropdown {
-  display: block;
- }
- /*RESPONSIVE NAVBAR MENU STARTS*/
-/* CHECKBOX HACK */
-input[type=checkbox]{
-display: none;
-} 
-/*HAMBURGER MENU*/
-.hamburger {
-display: none;
-font-size: 24px;
-user-select: none;
-}
-/* APPLYING MEDIA QUERIES */
-@media (max-width: 768px) {
-.menu { 
-display:none;
-position: absolute;
-background-color:teal;
-right: 0;
-left: 0;
-text-align: center;
-padding: 16px 0;
-}
-.menu li:hover {
-display: inline-block;
-background-color:#4c9e9e;
-transition: 0.3s ease;
-}
-.menu li + li {
-margin-top: 12px;
-}
-input[type=checkbox]:checked ~ .menu{
-display: block;
-}
-.hamburger {
-display: block;
-}
-.dropdown {
-left: 50%;
-top: 30px;
-transform: translateX(35%);
-}
-.dropdown li:hover {
-background-color: #4c9e9e;
-}
-}
-/*RESPONSIVE NAVBAR MENU STARTS*/
-/* CHECKBOX HACK */
-input[type=checkbox]{
-  display: none;
- } 
- /*HAMBURGER MENU*/
- .hamburger {
-  display: none;
-  font-size: 24px;
-  user-select: none;
- }
- /* APPLYING MEDIA QUERIES */
- @media (max-width: 768px) {
- .menu { 
-  display:none;
-  position: absolute;
-  background-color:teal;
-  right: 0;
-  left: 0;
-  text-align: center;
-  padding: 16px 0;
- }
- .menu li:hover {
-  display: inline-block;
-  background-color:#4c9e9e;
-  transition: 0.3s ease;
- }
- .menu li + li {
-  margin-top: 12px;
- }
- input[type=checkbox]:checked ~ .menu{
-  display: block;
- }
- .hamburger {
-  display: block;
- }
- .dropdown {
-  left: 50%;
-  top: 30px;
-  transform: translateX(35%);
- }
- .dropdown li:hover {
-  background-color: #4c9e9e;
- }
- }
-/* Navbar stuff start */
-#topnav {
+/*navbar start*/
+#myTopnav {
   margin-top: -1rem;
 }
-body {margin: 0;}
-
-ul.topnav {
-  list-style-type: none;
+body {
   margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
   overflow: hidden;
   background-color: #333;
 }
 
-ul.topnav li {float: left;}
-
-ul.topnav li a {
+.topnav a {
+  float: left;
   display: block;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
 
-ul.topnav li.right {float: right;}
+.topnav .icon {
+  display: none;
+}
 
 @media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
-/* End Navbar Stuff */
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+/*navbar end*/
 /* Start Main Body */
 /* Start Bad Grid Test */
 html { font-size: 22px; }
@@ -347,7 +197,7 @@ body {
   border: 3px solid black;
   background-color: rgba(68, 1, 128, 0.8);
   margin-bottom: 15px;
-}  
+}
 #vaccinebox {
   color: white;
   text-align: center;
