--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(0, 8, 117);
+  border-radius: 0.35rem;
 }
 
 .topnav a {
@@ -31,7 +32,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: darkslategray;
   color: white;
 }
 
